content/products/searchlight/5.0.0/reference/hostfacts/hostfacts.md
---
title: Hostfacts
menu:
  product_searchlight_5.0.0:
    identifier: hostfacts
    name: Hostfacts
    parent: hostfacts-cli
    weight: 0
product_name: searchlight
section_menu_id: reference
menu_name: product_searchlight_5.0.0
url: /products/searchlight/5.0.0/reference/hostfacts/
aliases:
- /products/searchlight/5.0.0/reference/hostfacts/hostfacts/
info:
  version: 5.0.0
---

## hostfacts

Hostfacts by AppsCode - Expose node metrics

### Synopsis

Hostfacts by AppsCode - Expose node metrics

### Options

```
      --allow_verification_with_non_compliant_keys   Allow a SignatureVerifier to use keys which are technically non-compliant with RFC6962.
      --alsologtostderr                              log to standard error as well as files
      --analytics                                    Send analytical events to Google Analytics (default true)
  -h, --help                                         help for hostfacts
      --log_backtrace_at traceLocation               when logging hits line file:N, emit a stack trace (default :0)
      --log_dir string                               If non-empty, write log files in this directory
      --logtostderr                                  log to standard error instead of files (default true)
      --stderrthreshold severity                     logs at or above this threshold go to stderr (default 2)
  -v, --v Level                                      log level for V logs
      --vmodule moduleSpec                           comma-separated list of pattern=N settings for file-filtered logging
```

### SEE ALSO

* [hostfacts run](/products/searchlight/5.0.0/reference/hostfacts/hostfacts_run)	 - Run server
* [hostfacts version](/products/searchlight/5.0.0/reference/hostfacts/hostfacts_version)	 - Prints binary version number.


